# fast_math_library

./: .gitignore  CMakeLists.txt  README.md  benchmarks_output.txt
analysis/: CMakeLists.txt
analysis/benchmarks/: CMakeLists.txt  plotscript.py
analysis/benchmarks/mathops/AVX/: avx_arithmeticmean_benchmarks.cpp  avx_cosarr_benchmarks.cpp  avx_geometricmean_benchmarks.cpp  avx_invsqrtarr_benchmarks.cpp  avx_max_benchmarks.cpp  avx_min_benchmarks.cpp  avx_prefixsum_benchmarks.cpp  avx_sinarr_benchmarks.cpp  avx_sqrtarr_benchmarks.cpp  avx_stddeviation_benchmarks.cpp  avx_sum_benchmarks.cpp  avx_sums_benchmarks.cpp  avx_variance_benchmarks.cpp  avx_weightedmean_benchmarks.cpp
analysis/benchmarks/mathops/SEQ/: seq_arithmeticmean_benchmarks.cpp  seq_cosarr_benchmarks.cpp  seq_geometricmean_benchmarks.cpp  seq_invsqrtarr_benchmarks.cpp  seq_max_benchmarks.cpp  seq_min_benchmarks.cpp  seq_prefixsum_benchmarks.cpp  seq_sinarr_benchmarks.cpp  seq_sqrtarr_benchmarks.cpp  seq_stddeviation_benchmarks.cpp  seq_sum_benchmarks.cpp  seq_sums_benchmarks.cpp  seq_variance_benchmarks.cpp  seq_weightedmean_benchmarks.cpp
analysis/benchmarks/mathops/accelerated/: accelerated_goniometric_benchmarks.cpp  accelerated_sqrt_benchmarks.cpp
analysis/benchmarks/mathops/basic/: basic_goniometric_benchmarks.cpp  basic_sqrt_benchmarks.cpp
analysis/benchmarks/mathops/boost/: boost_arithmeticmean_benchmarks.cpp  boost_median_benchmarks.cpp  boost_mode_benchmarks.cpp  boost_samplevariance_benchmarks.cpp  boost_variance_benchmarks.cpp
analysis/benchmarks/mathops/local/AVX/: avx_arithmeticmean_benchmarks.cpp  avx_cosarr_benchmarks.cpp  avx_geometricmean_benchmarks.cpp  avx_invsqrtarr_benchmarks.cpp  avx_max_benchmarks.cpp  avx_min_benchmarks.cpp  avx_prefixsum_benchmarks.cpp  avx_samplestddeviation_benchmarks.cpp  avx_samplevariance_benchmarks.cpp  avx_sinarr_benchmarks.cpp  avx_sqrtarr_benchmarks.cpp  avx_stddeviation_benchmarks.cpp  avx_stddeviationwithprobabilities_benchmarks.cpp  avx_sum_benchmarks.cpp  avx_variance_benchmarks.cpp  avx_variancewithprobabilities_benchmarks.cpp  avx_weightedmean_benchmarks.cpp
analysis/benchmarks/mathops/local/SEQ/: seq_arithmeticmean_benchmarks.cpp  seq_cosarr_benchmarks.cpp  seq_geometricmean_benchmarks.cpp  seq_invsqrtarr_benchmarks.cpp  seq_max_benchmarks.cpp  seq_median_benchmarks.cpp  seq_min_benchmarks.cpp  seq_mode_benchmarks.cpp  seq_prefixsum_benchmarks.cpp  seq_samplestddeviation_benchmarks.cpp  seq_samplevariance_benchmarks.cpp  seq_sinarr_benchmarks.cpp  seq_sqrtarr_benchmarks.cpp  seq_stddeviation_benchmarks.cpp  seq_stddeviationwithprobabilities_benchmarks.cpp  seq_sum_benchmarks.cpp  seq_variance_benchmarks.cpp  seq_variancewithprobabilities_benchmarks.cpp  seq_weightedmean_benchmarks.cpp
analysis/benchmarks/mathops/local/accelerated/: accelerated_goniometric_benchmarks.cpp  accelerated_sqrt_benchmarks.cpp
analysis/benchmarks/mathops/local/basic/: basic_goniometric_benchmarks.cpp  basic_sqrt_benchmarks.cpp
analysis/benchmarks/mathops/std/: std_goniometric_benchmarks.cpp  std_max_benchmarks.cpp  std_min_benchmarks.cpp  std_prefixsum_benchmarks.cpp  std_sqrt_benchmarks.cpp  std_sum_benchmarks.cpp
analysis/benchmarks/vec/glm/: glm_vec2_benchmarks.cpp  glm_vec3_benchmarks.cpp  glm_vec4_benchmarks.cpp
analysis/globalfixtures/: mathops_shared_fields.hpp  sums_shared_fields.hpp
analysis/tests/: CMakeLists.txt  tests_common.cpp  tests_common.hpp
analysis/tests/mathops/: mathops_tests_fixture.hpp  sums_tests_fixture.hpp  transcedentals_tests.cpp  transcedentals_tests_fixture.hpp  transcendentals_tests.cpp
analysis/tests/mathops/AVX/: avx_statisticals_tests.cpp  avx_sums_tests.cpp  avx_transcedentals_tests.cpp  avx_transcendentals_tests.cpp
analysis/tests/mathops/SEQ/: seq_statisticals_tests.cpp  seq_sums_tests.cpp  seq_transcedentals_tests.cpp  seq_transcendentals_tests.cpp
analysis/tests/simd/: simd_avx2_int_tests.cpp  simd_avx_float_tests.cpp
analysis/tests/simd/operations/: simd_avx2_int_tests.cpp  simd_avx_float_tests.cpp
include/: CMakeLists.txt  simd_operations.hpp  simd_vector.hpp
include/common/detail/: memory_common.inl
include/math/: sums.hpp
include/math/detail/: sums.inl
include/math/detail/AVX/: avx_sums.hpp  avx_sums.inl
include/math/detail/SEQ/: seq_sums.hpp  seq_sums.inl
include/mathops/: statisticals.hpp  sums.hpp  transcedentals.hpp  transcendentals.hpp
include/mathops/detail/: statisticals.inl  sums.inl  transcedentals.inl  transcendentals.inl
include/mathops/detail/AVX/: avx_statisticals.hpp  avx_statisticals.inl  avx_sums.hpp  avx_sums.inl  avx_transcedentals.hpp  avx_transcedentals.inl
include/mathops/detail/SEQ/: seq_statisticals.hpp  seq_statisticals.inl  seq_sums.hpp  seq_sums.inl  seq_transcedentals.hpp  seq_transcedentals.inl  seq_transcendentals.hpp  seq_transcendentals.inl
include/mathops/detail/VEC/: avx_sums.hpp  avx_sums.inl  avx_transcedentals.hpp  avx_transcedentals.inl  vec_statisticals.hpp  vec_statisticals.inl  vec_sums.hpp  vec_sums.inl  vec_transcendentals.hpp  vec_transcendentals.inl
include/mathops/detail/common/: memory_common.inl
include/simd/: simd_common.hpp  simd_operations.hpp  simd_operations_avx.hpp  simd_operations_avx2.hpp  simd_vec.hpp  simd_vector.hpp  simd_vector_avx.hpp
include/simd/detail/operations/: simd_operations_avx2_int.hpp  simd_operations_avx2_int.inl  simd_operations_avx_float.hpp  simd_operations_avx_float.inl  simd_operations_base.hpp
include/simd/detail/vec/: simd_vec2.hpp  simd_vec2.inl  simd_vec3.hpp  simd_vec3.inl  simd_vec4.hpp  simd_vec4.inl  simd_vec_float.hpp  simd_vec_float.inl  simd_vec_t.hpp  simd_vec_t.inl
include/simd/detail/vector/: simd_vector_avx_float.hpp  simd_vector_avx_float.inl  simd_vector_base.hpp
include/simd/vec/: simd_vec.hpp
include/simd/vec/detail/: simd_vec_t.hpp  simd_vec_t.inl
tests/: CMakeLists.txt  test.cpp  tests_common.cpp  tests_common.hpp
tests/mathops/: sums_fixture.hpp
tests/mathops/AVX/: avx_sums_tests.cpp
tests/mathops/SEQ/: seq_sums_tests.cpp
tests/simd/: simd_avx_float_tests.cpp
(+61 files in other folders)
